# termite

./: .gitignore  OVERVIEW.md  README.md  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: ci.yml  release.yml
cmd/: daemon.go  install_daemon.go  root.go  run.go
internal/animation/: forest.go  particles.go  quotes.go  spring.go  transitions.go
internal/app/: app.go
internal/config/: config.go  defaults.go  validate.go
internal/daemon/: daemon.go
internal/db/: db.go
internal/debuglog/: agent.go
internal/engine/: account.go  compose_send.go  imap.go  parser.go  smtp.go  sync.go  thread.go
internal/log/: log.go
internal/metrics/: export.go  milestones.go  tracker.go
internal/notifications/: desktop.go  manager.go  status.go  tmux.go
internal/providers/: base.go  fastmail.go  generic.go  gmail.go  gmail_credentials_test.go  gmail_userinfo_test.go  outlook.go  outlook_test.go  values_encode_test.go
internal/themes/: manager.go  styles.go  theme.go
internal/tui/: app_model.go  keymap.go  messages.go
termite/: app.py  cli.py  daemon.py
termite/cache/: __init__.py  db.py  queries.py  schema.sql
termite/commands/: __init__.py  connect.py  daemon.py  registry.py  search.py  sessions.py  snooze.py  theme.py
termite/config/: __init__.py  defaults.py  loader.py  schema.py
termite/engine/: __init__.py  imap.py  parser.py  sync.py  thread.py
termite/notifications/: __init__.py  status.py
termite/providers/: __init__.py  base.py  gmail.py  outlook.py
termite/themes/: dark.tcss  light.tcss
termite/ui/: theme_manager.py
(+53 files in other folders)
