[project]
name = "termite-mail"
version = "0.1.0"
description = "A Superhuman-inspired, keyboard-first TUI email client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.82",
    "imapclient>=3.0",
    "aiosmtplib>=3.0",
    "aiosqlite>=0.20",
    "keyring>=25",
    "google-auth-oauthlib>=1.2",
    "msal>=1.28",
    "html2text>=2024.2",
    "mail-parser>=3.15",
    "click>=8.1",
    "tomli-w>=1.0",
    "pydantic>=2.7",
    "structlog>=24",
    "rich>=13",
    "desktop-notifier>=3.5",
]

[project.scripts]
termite = "termite.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["termite"]
